// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<section>
  <article>
    <p>
      React Calendar Widget example - calendar date is fed from the route
    </p>
  </article>
  <article
    className="widgets"
  >
    <CalendarWidget
      currentMonth={"1970-01-01T00:00:00.000Z"}
      onDateChanged={[Function]}
      todayDate={"1970-01-01T00:00:00.000Z"}
    />
  </article>
  <nav>
    <NavLink
      activeClassName="active"
      ariaCurrent="true"
      to="/"
    >
      Home
    </NavLink>
  </nav>
</section>
`;

exports[`should render correctly with props 1`] = `
<section>
  <article>
    <p>
      React Calendar Widget example - calendar date is fed from the route
    </p>
  </article>
  <article
    className="widgets"
  >
    <CalendarWidget
      currentMonth={"1979-06-12T23:00:00.000Z"}
      onDateChanged={[Function]}
      todayDate={"1970-01-01T00:00:00.000Z"}
    />
  </article>
  <nav>
    <NavLink
      activeClassName="active"
      ariaCurrent="true"
      to="/"
    >
      Home
    </NavLink>
  </nav>
</section>
`;
